Fixed parallax offset on mobile.

--- a/css/styles.css
+++ b/css/styles.css
@@ -595,7 +595,7 @@ footer {
     background-image: url(../media/dot.svg), url(../media/Hero2CroppedWeb.jpg);
 
 
-    min-height: calc(100vh - 68px);
+    min-height: calc(100vh - 55px);
 
 
     background-attachment: fixed;
